--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,18 @@
         <artifactId>spring-boot-starter-web</artifactId>
         <version>2.1.4.RELEASE</version>
     </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>3.3.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
